--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-#header {
+body {
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+header {
         background-color: #fff;
         border-radius: 0;
         border: 0;
         padding-bottom: 0;
-}
-
-#body {
-    margin: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .topnav {
@@ -38,4 +38,69 @@
     border-top-style: groove;
     border-top-color: #9dbbdf;
   }
+
+  #heading-name {
+    text-align: left;
+    padding-left: 280px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4A5868;
+  }
   
+  #heading-name h1{
+    font-size: 30px;
+    text-shadow: 2px 0px 0px 2px #ffffff;
+    letter-spacing: 5px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
+
+  #heading-name h4{
+    font-size: 15px;
+    word-spacing: 5px;
+    margin-top: 0px;
+    padding-top: 0px;
+  }
+
+  #background1 {
+    float: left;
+  }
+
+  #background1 img {
+    margin-top: 180px;
+    width: 800px;
+    height: auto;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+  }
+
+  #background1 div {
+    display: block;
+    position: absolute;
+    padding: 80px 70px 100px 70px;
+    height: 150px;
+    width: 300px;
+    left: 700px;
+    top: 300px;
+    background-color: #9dbbdf;
+    color: #ffffff;
+  }
+
+  #text1 .btn {
+    position: absolute;
+    text-transform: uppercase;
+    background-color: white;
+    color: #9dbbdf;
+    font-size: 12px;
+    padding: 13px 20px;
+    margin: 10px 0px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+  }
+
+  #text1 .btn:hover {
+    color: white;
+    background-color: #4A5868;
+  }
