--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif
+
 }
 
 header {
@@ -61,6 +62,63 @@ header {
     padding-top: 0px;
   }
 
+  /* Footer */
+  .panel-footer {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-color: #9dbbdf;
+  }
+
+/*  footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height: 100px;
+    background-color: #9dbbdf;
+ }*/
+
+ #contactno {
+   color: #4A5868;
+   text-align: center;
+   padding: 0;
+   margin: 0;
+   border: 0;
+ }
+
+ .row div {
+  display: inline-block;
+/*  width: 300px;*/
+  min-height: 50px;
+  height: auto;
+ }
+
+/* footer div.row:after {
+  content: "";
+  display: table;
+  clear: both;
+ }*/
+ 
+ #copyright {
+   color: #4A5868;
+   font-style: italic;
+   padding-left: 150px;
+ }
+
+ #sociallogo {
+  padding-left: 480px;
+  padding-right: 100px;
+  height: auto;
+ }
+
+ #sociallogo i {
+  padding: 5px;
+ }
+
+  #main-content {
+    height: 1300px;
+    padding-bottom: 100px;
+  }
+
   #background1 {
     float: left;
   }
@@ -104,3 +162,75 @@ header {
     color: white;
     background-color: #4A5868;
   }
+
+  #background2 img {
+    float: right;
+    display: block;
+    margin-top: 800px;
+    margin-right: 80px;
+    width: 700px;
+    height: auto;
+    position: relative;
+    right: 0px;
+  }
+
+  #contact-content {
+    height: 700px;
+  }
+
+  #contact-content h1 {
+    text-align: center;
+    margin: 10px auto;
+    width: 700px;
+    background-color: #9dbbdf;
+    color: #fff;
+    padding: 10px 150px;
+  }
+
+  #contact-content p {
+    color: #4A5868;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: 20px;
+    font-size: 1.1em;
+    margin-bottom: 30px;
+  }
+
+  #contact-content form {
+    display: block;
+    text-align: center;
+  }
+
+  input[type=text], input[type=email], textarea {
+  width: 600px;
+  padding: 12px;
+  border: 1px solid #9dbbdf;
+  background-color: #BFCCDB;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: #4A5868;
+}
+
+input[type=text]:hover, input[type=email]:hover, textarea:hover {
+  background-color: #9dbbdf;
+}
+
+input[type=submit] {
+  background-color: #4A5868;
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #9dbbdf;
+}
+
+
