--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 
 }
 
+/*Header*/
 header {
         background-color: #fff;
         border-radius: 0;
@@ -64,9 +65,12 @@ header {
 
   /* Footer */
   .panel-footer {
-    padding-top: 20px;
-    padding-bottom: 10px;
     background-color: #9dbbdf;
+    bottom: 0;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    max-height: 130px;
   }
 
 /*  footer {
@@ -114,6 +118,7 @@ header {
   padding: 5px;
  }
 
+/*Home Page*/
   #main-content {
     height: 1300px;
     padding-bottom: 100px;
@@ -174,6 +179,7 @@ header {
     right: 0px;
   }
 
+/*Contact Page*/
   #contact-content {
     height: 700px;
   }
@@ -233,4 +239,49 @@ input[type=submit]:hover {
   background-color: #9dbbdf;
 }
 
+/*--Gallery Page--*/
+.slideshow-container {
+  max-width: 750px;
+  max-height: 800px;
+  position: relative;
+  margin: auto;
+  height: auto;
+  float: left;
+}
 
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  color: white;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/*--Gallery Page ends--*/
